CSS fixes for readability stuff

--- a/Web Application/assets/styles/style.css
+++ b/Web Application/assets/styles/style.css
@@ -6,6 +6,8 @@ html, body {
 	font-weight: 100;
 }
 
+/* GENERAL FOR ALL */
+
 .container {
 	position: relative;
 	height: 100%;
@@ -13,6 +15,8 @@ html, body {
 	left: 0;
 	transition: left 0.2s ease-in-out;
 }
+
+/* SIDE - NAVIGATION */
 
 .container.open-sidebar { 
 	left: 240px; 
@@ -62,6 +66,8 @@ html, body {
 	background-color: #C9223D; 
 }
 
+/* GENERAL THINGIES FOR THE MAIN CONTENT */
+
 .main-content {
 	width: 100%;
 	height: 100%;
@@ -76,13 +82,8 @@ html, body {
 	box-sizing: border-box;
 }
 
-.main-content .content h1 { 
-	font-weight: 100; 
-}
-
 .main-content .content p {
 	width: 100%;
-	line-height: 160%;
 }
 
 .main-content #sidebar-toggle {
@@ -106,6 +107,8 @@ html, body {
 .main-content #sidebar-toggle .bar:last-child { 
 	margin-bottom: 0; 
 }
+
+/* INDEX.HTML DATE THING */
 
 #day, #date{
 	display: block;
